--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "cy:open": "cypress open",
-    "cy:tests": "cypress run"
+    "cy:run-chrome": "cypress run --browser chrome",
+    "cy:run-firefox": "cypress run --browser firefox",
+    "cy:run-electron": "cypress run --browser electron",
+    "cy:run-dashboard": "cypress run --record --key 879c4059-122a-46b1-bf69-54984371e673"
   },
   "keywords": [
     "cucumber",
